--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -9,6 +9,11 @@ RUN apt-get update \
     && curl -sSL https://get.docker.com/ | sh \
     && usermod -aG docker jenkins  # Add jenkins user to docker group
 
+# Install kubectl directly from Google's storage
+RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" \
+    && chmod +x kubectl \
+    && mv kubectl /usr/local/bin/
+
 # Allow jenkins user to run sudo without a password prompt
 RUN echo "jenkins ALL=NOPASSWD: ALL" >> /etc/sudoers
 
@@ -17,4 +22,3 @@ USER jenkins
 # Install Jenkins plugins
 COPY plugins.txt /usr/share/jenkins/plugins.txt
 RUN jenkins-plugin-cli --plugin-file /usr/share/jenkins/plugins.txt
-
