--- a/mon-app/values.yaml
+++ b/mon-app/values.yaml
@@ -20,9 +20,9 @@ image:
 # fullnameOverride: ""
 
 # # This section builds out the service account more information can be found here: https://kubernetes.io/docs/concepts/security/service-accounts/
-# serviceAccount:
-#   # Specifies whether a service account should be created
-#   create: true
+serviceAccount:
+   # Specifies whether a service account should be created
+  create: false
 #   # Automatically mount a ServiceAccount's API credentials?
 #   automount: true
 #   # Annotations to add to the service account
