--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -7,6 +7,6 @@ spec:
     app: mon-app
   ports:
     - protocol: TCP
-      port: 8081
+      port: 8082
       targetPort: 5000
-  type: LoadBalancer
+  type: NodePort
